# ApertureSrc

./: .gitignore  CMakeLists.txt  README.md  clang-format.sh
mgt/: CMakeLists.txt  README.md
mgt/common/: ArchTypes.hpp  CommonTypes.hpp  PlatformTypes.hpp  bspfile.h  com_model.h  common.h  interface.h  mathlib.h  modelgen.h  msg.h  netadr.h  protocol.h  qlibc.h  ref_params.h  sizebuf.h  spritegn.h
mgt/common/core/: IEngineCore.hpp
mgt/common/dedicated/: IDedicatedExports.h
mgt/common/engine/: ICmdArgs.hpp  ICmdLine.hpp  ICmdProcessor.hpp  ICmdRegistry.hpp  IConVarController.hpp  IConsole.hpp  ICvarRegistry.hpp  IEngine.hpp  IEntity.hpp  IEntityEventListener.hpp  IEventManager.hpp  IGameClient.hpp  IGameClientEventListener.hpp  IGameServer.hpp  IGameWorld.hpp  IInfoBuffer.hpp  IMemory.hpp  IModelLoader.hpp  INetMsg.hpp  IResourceManager.hpp  IStringPool.hpp  ISystem.hpp  ISystemEventListener.hpp  IUtils.hpp
mgt/common/engineclient/: IEngineClient.hpp
mgt/common/filesystem/: IFile.hpp  IFileSystem.hpp
mgt/common/gameui/: IGameConsole.hpp  IGameUI.hpp
mgt/common/input/: IInput.hpp
mgt/common/inputsystem/: IInputEventListener.hpp  IInputSystem.hpp
mgt/common/network/: INetChannel.hpp  INetMsg.hpp  INetwork.hpp  IWriteBuffer.hpp  NetMsg.hpp
mgt/common/networksystem/: INetChannel.hpp  INetwork.hpp  IReadBuffer.hpp
mgt/common/physics/: IPhysics.hpp  IPhysicsBody.hpp  IPhysicsWorld.hpp
mgt/core/: EngineCore.hpp
mgt/dedicated/: CMakeLists.txt  DedicatedExports.cpp  DedicatedExports.h  DedicatedExports.hpp  sys_ded.cpp
mgt/engine/: CMakeLists.txt  Cache.cpp  Cache.hpp  Cmd.hpp  CmdArgs.cpp  CmdArgs.hpp  CmdProcessor.cpp  CmdProcessor.hpp  CmdRegistry.cpp  CmdRegistry.hpp  ConVarController.cpp  ConVarController.hpp  Console.hpp  Cvar.hpp  CvarRegistry.cpp  CvarRegistry.hpp  Engine.cpp  Engine.hpp  Entity.cpp  Entity.hpp  EntityEventDispatcher.cpp  EntityEventDispatcher.hpp  GameClient.cpp  GameClient.hpp  GameClientEventDispatcher.cpp  GameClientEventDispatcher.hpp  GameLoader.cpp  GameLoader.hpp  GameServer.cpp  GameServer.hpp  GameServerData.hpp  Host.hpp  Hunk.cpp  Hunk.hpp  IGameLoader.hpp  Info.hpp  InfoBuffer.cpp  InfoBuffer.hpp  Mem.hpp  Memory.cpp  (+116 more)
mgt/engine/fixme/: cd.cpp  (+32 more)
mgt/engineclient/: BaseUI.cpp  BaseUI.h  CDAudio.cpp  CDAudio.hpp  CMakeLists.txt  Chase.cpp  Client.hpp  ClientDemo.cpp  ClientGame.cpp  ClientGameInterface.cpp  ClientInput.cpp  ClientMain.cpp  ClientParse.cpp  ClientPrediction.cpp  Console.hpp  Draw.hpp  EngineClient.cpp  EngineClient.hpp  EngineSurface.cpp  EngineSurface.h  EventManager.hpp  GameUIFuncs.cpp  GameUIFuncs.hpp  Input.hpp  Keys.hpp  Menu.cpp  Menu.hpp  Model.cpp  Render.hpp  Screen.hpp  Sound.cpp  Sound.hpp  StatusBar.cpp  StatusBar.hpp  Video.cpp  View.hpp  block16.h  block8.h  cdaudio.cpp  cdaudio.h  (+64 more)
mgt/gameui/: CMakeLists.txt  CareerUI.hpp  CreateMultiplayerGameBotPage.cpp  CreateMultiplayerGameBotPage.hpp  CreateMultiplayerGameDialog.cpp  CreateMultiplayerGameDialog.hpp  CreateMultiplayerGameGameplayPage.cpp  CreateMultiplayerGameGameplayPage.hpp  CreateMultiplayerGameServerPage.cpp  GameConsole.cpp  GameConsole.hpp  GameUI.cpp  GameUI.hpp  MusicManager.hpp  OptionsDialog.cpp  OptionsDialog.hpp  OptionsSubAudio.cpp  OptionsSubAudio.hpp  OptionsSubGame.hpp  OptionsSubKeyboard.cpp  OptionsSubKeyboard.hpp  OptionsSubMouse.cpp  OptionsSubMultiplayer.hpp  OptionsSubVideo.cpp  OptionsSubVideo.hpp  RunGameEngine.hpp  VGuiModuleLoader.hpp
mgt/input/: CMakeLists.txt  Input.cpp  Input.hpp  InputEventDispatcher.hpp
mgt/inputsystem/: CMakeLists.txt  IInputSystemImpl.hpp  InputEventDispatcher.cpp  InputSystem.cpp  InputSystem.hpp
mgt/interface/: interface.cpp
mgt/launcher/: AppExports.cpp  Application.cpp  Application.hpp  CMakeLists.txt  launcher.cpp
mgt/mathlib/: CMakeLists.txt  mathlib.cpp
mgt/network/: CMakeLists.txt  NetChannel.cpp  NetChannel.hpp  Network.cpp  Network.hpp  winquake.h
mgt/networksystem/: CMakeLists.txt  NetChannel.cpp  NetChannel.hpp  NetworkSystem.cpp  NetworkSystem.hpp  winquake.h
mgt/optional/: CMakeLists.txt
mgt/pm_shared/: CMakeLists.txt  pm_debug.cpp  pm_shared.cpp
mgt/qlibc/: CMakeLists.txt  qlibc.cpp
mgt/script/: CMakeLists.txt  SquirrelInstance.cpp  SquirrelInstance.hpp  SquirrelScript.cpp  SquirrelScript.hpp
mgt/sound/: CMakeLists.txt  Sound.cpp  Sound.hpp  SoundSystem.hpp  snd_dma.cpp  snd_mem.cpp
mgt/soundsystem/: CMakeLists.txt  SoundSystem.cpp  SoundSystem.hpp  snd_mix.cpp  vox.cpp  winquake.h
mgt/tier1/: ByteBuffer.cpp  CMakeLists.txt  SizeBuffer.cpp  qcommon.cpp
src/: CMakeLists.txt  README.md
src/engine/: CMakeLists.txt  Cache.cpp  Cache.hpp  Client.cpp  Client.hpp  Cmd.cpp  Cmd.hpp  CmdArgs.cpp  CmdArgs.hpp  CmdBuffer.cpp  CmdBuffer.hpp  CmdProcessor.cpp  CmdProcessor.hpp  CmdRegistry.cpp  CmdRegistry.hpp  ConVar.cpp  Cvar.cpp  Cvar.hpp  CvarRegistry.cpp  CvarRegistry.hpp  Edict.hpp  Engine.cpp  Engine.hpp  EngineClient.cpp  EngineClient.hpp  FileSystem.cpp  FileSystem.hpp  GameClient.cpp  GameClient.hpp  GameServer.cpp  GameServer.hpp  Host.cpp  Host.hpp  HostCmds.hpp  Hunk.cpp  Hunk.hpp  IEngineModule.hpp  IEngineState.hpp  Info.cpp  Info.hpp  (+40 more)
src/engineclient/: CDAudio.cpp  CDAudio.hpp  CMakeLists.txt  ClientGame.cpp  ClientGame.hpp  ClientState.cpp  ClientState.hpp  Console.cpp  Console.hpp  Draw.cpp  Draw.hpp  EngineClient.cpp  EngineClient.hpp  Input.cpp  Input.hpp  Keys.cpp  Keys.hpp  Render.hpp  Renderer.cpp  Renderer.hpp  Screen.cpp  Screen.hpp  Sound.cpp  Sound.hpp  Video.cpp  Video.hpp  View.cpp  View.hpp  Voice.cpp  Voice.hpp  Vox.hpp  WADCache.cpp  WADCache.hpp  Wad.cpp  Wad.hpp  quakedef.h
src/inputsystem/: CMakeLists.txt  InputSystem.cpp  InputSystem.hpp
src/networksystem/: CMakeLists.txt  INetworkImpl.hpp  NetChannel.cpp  NetChannel.hpp  NetworkSystem.cpp  NetworkSystem.hpp
src/physics/: CMakeLists.txt
src/renderer/: CMakeLists.txt
src/scriptsystem/: CMakeLists.txt
src/soundsystem/: CMakeLists.txt  SoundEmitter.cpp  SoundEmitter.hpp  SoundSystem.cpp  SoundSystem.hpp  SoundWorld.cpp  SoundWorld.hpp
src/voice/: CMakeLists.txt
(+595 files in other folders)
